# Namera

./: .gitignore  AGENTS.md  CLAUDE.md  HACKER_NEWS.md  PLAN.md  README.md  TANZIM_CHANGES.md  TODOS.md  doppler.yaml  marketplace.json  pyproject.toml  reddit.md  server.json
.claude-plugin/: plugin.json
.claude/commands/: namera.md
.claude/output-styles/: namera.md
.claude/skills/namera/: SKILL.md  reference.md
.github/workflows/: auto-release.yml  ci.yml  publish.yml
examples/: claude_desktop_config.json
scripts/: import_fast.py  import_trademarks.py  import_via_rest.py
skills/compose/: SKILL.md
skills/find/: SKILL.md
skills/rank/: SKILL.md
skills/search/: SKILL.md
src/namera/: __init__.py  agent.py  cache.py  cli.py  composer.py  context.py  core.py  filters.py  mcp_server.py  output.py  permutations.py  pipeline.py  presets.py  ranking_display.py  results.py  retry.py  runner.py  session.py  telemetry.py  theme.py
src/namera/providers/: __init__.py  base.py  domain.py  domain_api.py  rdap.py  social.py  trademark.py  trademark_supabase.py  whois.py
src/namera/scoring/: __init__.py  context_signals.py  engine.py  local_signals.py  models.py  normalizers.py  profiles.py
supabase/.temp/: pooler-url  project-ref
supabase/functions/session-log/: index.ts
supabase/functions/trademark-check/: index.ts
supabase/migrations/: 20260331123000_reconcile_namera_sessions_telemetry_contract.sql
tests/: conftest.py  test_agent.py  test_cache.py  test_compose_command.py  test_composer.py  test_context.py  test_core.py  test_domain_api.py  test_filters.py  test_find_command.py  test_mcp_server.py  test_output.py  test_permutations.py  test_presets.py  test_rdap.py  test_retry.py  test_runner.py  test_scoring.py  test_telemetry.py  test_trademark_supabase.py
