[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "namera"
dynamic = ["version"]
description = "CLI tool for checking name availability across domains, trademarks, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sid Sharma" }]
keywords = ["naming", "domain", "trademark", "cli", "availability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/siddmax/Namera"
Repository = "https://github.com/siddmax/Namera"
Issues = "https://github.com/siddmax/Namera/issues"

[project.scripts]
namera = "namera.cli:main"
namera-mcp = "namera.mcp_server:main"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.35",
    "ruff>=0.4",
]
import = [
    "psycopg[binary]>=3.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/namera/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/namera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
